--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+nav {
+
+}
+
 body {
   margin: 0;
   font-family: system-ui, sans-serif;
@@ -25,9 +29,39 @@ main button {
   height: 150vh;
   background: linear-gradient(white, tan);
   width: 100vw;
+  display: flex;
+  justify-content: center;
 }
 
 dialog::backdrop {
   background-color: salmon;
   opacity: 0.5;
+}
+
+
+
+nav {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5rem;
+  gap: 0.5rem;
+  border-bottom: solid 1px #aaa;
+  /* background-color: #eee; */
+}
+
+nav a {
+  min-width: 25%;
+  padding: 0.5rem;
+  border-radius: 0.2rem;
+  border: solid 1px #aaa;
+  text-align: center;
+  text-decoration: none;
+  color: #555;
+}
+
+nav a[aria-current='page'] {
+  /* color: #000; */
+  background-color: #d4d4d4;
 }
